Fixed overlapping of feed over post UI

--- a/src/components/feed.css
+++ b/src/components/feed.css
@@ -15,6 +15,7 @@
     right: 0;
     height: 2px;
     background-color: gray;
+    z-index: -1;
 }
 
 .feed:before {
